# AIMath

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: cache.py  deps.py  main.py  models.py
api/routers/: health.py  route.py  search.py
cmcs_safe_route.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: 대전광역시_불법주정차 단속현황_20221231.csv  대전광역시_횡단보도_20230105.csv  동부교육지원청+학원+및+교습소+현황(2026.5.31.).xlsx  서부교육지원청+학원+및+교습소+현황(2026.5.31.).xlsx  한국교육시설안전원_초중등학교위치_20260320.csv
scripts/: refresh_data.py
src/: __init__.py  aco_pareto_rcsp.py  api_preprocessing.py  cmcs_calculator.py  data_collector.py  data_driven_cmcs.py  data_quality.py  demo.py  final_model_evaluation.py  full_pipeline.py  geocoder.py  model_trainer.py  model_validation.py  preprocessor.py  pulse_algorithm.py  real_data_pipeline.py  route_optimizer.py  route_validator.py  visualize_risk_zones.py  visualizer.py
static/: index.html
tests/: test_aco_pareto_rcsp.py  test_api.py  test_api_preprocessing.py  test_cmcs.py  test_data_driven_cmcs.py  test_data_quality.py  test_demo.py  test_final_model_evaluation.py  test_full_pipeline.py  test_geocoder.py  test_model.py  test_model_validation.py  test_preprocessor.py  test_pulse_algorithm.py  test_real_data_pipeline.py  test_route.py  test_route_validator.py
