[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmcs-safe-route"
version = "0.1.0"
description = "CMCS 기반 어린이 안전 통학 경로 추천 시스템"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "networkx>=3.1",
  "openpyxl>=3.1",
  "pypdf>=5",
  "requests>=2.31",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
ml = [
  "xgboost>=2.0",
  "shap>=0.43",
]
geo = [
  "geopandas>=0.14",
  "osmnx>=1.7",
  "pyproj>=3.6",
  "shapely>=2.0",
]
viz = [
  "folium>=0.15",
  "matplotlib>=3.8",
  "plotly>=5.18",
  "seaborn>=0.13",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
